[gd_scene load_steps=14 format=3 uid="uid://diyl0h8763r2m"]

[ext_resource type="Script" uid="uid://br8lcq21j52gp" path="res://src/enemies/enemyShield/enemeyShield.gd" id="1_k8hgm"]
[ext_resource type="Texture2D" uid="uid://dxo4jti5rd5kg" path="res://assets/enemies/charge/charge attack run_01.png" id="2_sopi0"]
[ext_resource type="Texture2D" uid="uid://c1sl4wnngqa5e" path="res://assets/enemies/charge/charge attack run_02.png" id="3_g1bpm"]
[ext_resource type="Texture2D" uid="uid://bypogmm5g24sc" path="res://assets/enemies/charge/charge attack run_03.png" id="4_qixvo"]
[ext_resource type="Texture2D" uid="uid://djpk2acqh20vy" path="res://assets/enemies/charge/charge attack run_04.png" id="5_pfo4d"]
[ext_resource type="Texture2D" uid="uid://d1wfjcs31bhvv" path="res://assets/enemies/charge/charge attack windup_01.png" id="6_omrq4"]
[ext_resource type="Texture2D" uid="uid://bwe3x2ahq0jv2" path="res://assets/enemies/charge/charge attack windup_02.png" id="7_8ltxn"]
[ext_resource type="Texture2D" uid="uid://bcejg25f2bpwr" path="res://assets/enemies/charge/charge attack windup_03.png" id="8_08eqt"]
[ext_resource type="Texture2D" uid="uid://bqeue4edr8hdu" path="res://assets/enemies/charge/charge attack windup_04.png" id="9_0esqm"]

[sub_resource type="SpriteFrames" id="SpriteFrames_s8ehm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_sopi0")
}, {
"duration": 1.0,
"texture": ExtResource("3_g1bpm")
}, {
"duration": 1.0,
"texture": ExtResource("4_qixvo")
}, {
"duration": 1.0,
"texture": ExtResource("5_pfo4d")
}],
"loop": true,
"name": &"charge",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_omrq4")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_omrq4")
}, {
"duration": 1.0,
"texture": ExtResource("7_8ltxn")
}, {
"duration": 1.0,
"texture": ExtResource("8_08eqt")
}, {
"duration": 1.0,
"texture": ExtResource("9_0esqm")
}],
"loop": true,
"name": &"windup",
"speed": 4.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mbp0j"]
size = Vector2(114, 108)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_462bx"]
size = Vector2(96, 104)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6dicg"]
size = Vector2(110, 128)

[node name="EnemyShield" type="CharacterBody2D"]
collision_layer = 4
script = ExtResource("1_k8hgm")

[node name="flippable" type="Node2D" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="flippable"]
modulate = Color(1, 0.56, 0.56, 1)
position = Vector2(-8, -38)
rotation = 3.1415927
scale = Vector2(0.5, -0.5)
sprite_frames = SubResource("SpriteFrames_s8ehm")
animation = &"windup"

[node name="ColorRect2" type="ColorRect" parent="flippable"]
offset_left = 57.0
offset_top = -64.0
offset_right = 77.0
offset_bottom = 51.0
color = Color(0.8517605, 0.0004670608, 0.829394, 1)
metadata/_edit_use_anchors_ = true

[node name="ShieldSprite" type="ColorRect" parent="flippable"]
offset_left = 56.0
offset_top = -64.0
offset_right = 81.0
offset_bottom = 51.0
color = Color(0.9680254, 0, 0.28247893, 1)
metadata/_edit_use_anchors_ = true

[node name="PlayerDetector" type="RayCast2D" parent="flippable"]
target_position = Vector2(550, 0)
collision_mask = 2

[node name="shield_hitbox" type="Area2D" parent="flippable"]
position = Vector2(6, -7)
collision_layer = 0
collision_mask = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="flippable/shield_hitbox"]
position = Vector2(56, 0)
shape = SubResource("RectangleShape2D_mbp0j")
debug_color = Color(0.97230154, 0, 0.44529122, 0.41960785)

[node name="enemy_hitbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 10

[node name="hitbox-colli_shape2d" type="CollisionShape2D" parent="enemy_hitbox"]
position = Vector2(-1, -6)
shape = SubResource("RectangleShape2D_462bx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, -8)
shape = SubResource("RectangleShape2D_6dicg")

[node name="StunedTimer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="flippable/shield_hitbox" to="." method="_on_shield_hitbox_body_entered"]
[connection signal="body_entered" from="enemy_hitbox" to="." method="collide"]
[connection signal="timeout" from="StunedTimer" to="." method="_on_stuned_timer_timeout"]
